--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -53,12 +53,12 @@
     @include vp-1024 {
       align-items: flex-start;
       max-width: 450px;
-      margin-left: 36px;
+      margin: 0 0 80px 36px;
     }
 
     @include vp-1280 {
       max-width: 496px;
-      margin-left: auto;
+      margin: 0 0 0 auto;
     }
   }
 
@@ -184,6 +184,8 @@
     width: 314px;
     height: 400px;
 
+    user-select: none;
+
     @include vp-768 {
       bottom: -44px;
 
@@ -193,6 +195,8 @@
 
     @include vp-1024 {
       order: -1;
+      align-self: flex-end;
+
       position: relative;
       bottom: 0;
 
