--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -24,7 +24,10 @@
   cursor: pointer;
   user-select: none;
 
+  outline: none;
+
   transition: opacity $trans-default;
+  transform: translate3d(0, 0, 0);
 
   @include vp-768 {
     padding: 10px 22px;
