--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -33,7 +33,7 @@
 
     @include vp-1024 {
       align-items: flex-start;
-      padding: 160px 24px 264px 24px;
+      padding: 160px 24px 200px 24px;
     }
 
     @include vp-1280 {
@@ -66,7 +66,7 @@
 
     span {
       background-color: $color-default-white;
-      background: linear-gradient(300.11deg, $color-peach 5.04%, $color-dark-orchid 76.02%);
+      background-image: linear-gradient(300.11deg, $color-peach 5.04%, $color-dark-orchid 76.02%);
       background-clip: text;
       -webkit-background-clip: text;
 
@@ -102,8 +102,10 @@
       right: 0;
       left: unset;
 
-      width: 764px;
-      height: 696px;
+      width: 100%;
+      height: 100%;
+      max-width: 764px;
+      max-height: 696px;
       margin: 0;
     }
 
@@ -111,7 +113,7 @@
       width: 388px;
       height: 388px;
 
-      object-fit: contain;
+      object-fit: cover;
 
       @include vp-768 {
         width: 640px;
@@ -119,8 +121,10 @@
       }
 
       @include vp-1024 {
-        width: 764px;
-        height: 696px;
+        width: 100%;
+        height: 100%;
+        max-width: 764px;
+        max-height: 696px;
 
         object-fit: cover;
         object-position: left;
