--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -7,12 +7,17 @@
   width: 100%;
   height: 100vh;
   padding: 112px 40px;
+  overflow-y: auto;
 
   background-color: $color-black-pearl-2;
 
   transition: transform $trans-default;
   transform: translateX(-100%);
   transform-origin: left;
+
+  @include vp-768 {
+    display: none;
+  }
 
   &__list {
     display: flex;
