fix: исправляет градиент

--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -65,8 +65,8 @@
     }
 
     span {
+      background: linear-gradient(300.11deg, $color-peach 5.04%, $color-dark-orchid 76.02%);
       background-color: $color-default-white;
-      background-image: linear-gradient(300.11deg, $color-peach 5.04%, $color-dark-orchid 76.02%);
       background-clip: text;
       -webkit-background-clip: text;
 
